nenolod     2006/09/25 09:03:29 UTC	(20060925-6451)
  Log:
  - use our enum {} for boolean_t, not the GCC builtin (portability)
  

  Changes:	Modified:
  +5 -5		trunk/protocol/inspircd11.c (File Modified) 


jilles      2006/09/24 23:55:08 UTC	(20060924-6449)
  Log:
  Don't behave strangely if the executable has been renamed.
  

  Changes:	Modified:
  +0 -5		trunk/src/function.c (File Modified) 


nenolod     2006/09/24 23:52:03 UTC	(20060924-6447)
  Log:
  - remove win32 port, it's hopelessly broken and nobody cares about it
  

  Changes:	Modified:
  +0 -69	trunk/Makefile.win32 (File Deleted) 
  +0 -53	trunk/backend/Makefile.win32 (File Deleted) 
  +0 -55	trunk/libatheme/Makefile.win32 (File Deleted) 
  +0 -52	trunk/modules/Makefile.win32 (File Deleted) 
  +0 -81	trunk/modules/chanserv/Makefile.win32 (File Deleted) 
  +0 -52	trunk/modules/global/Makefile.win32 (File Deleted) 
  +0 -56	trunk/modules/helpserv/Makefile.win32 (File Deleted) 
  +0 -64	trunk/modules/memoserv/Makefile.win32 (File Deleted) 
  +0 -74	trunk/modules/nickserv/Makefile.win32 (File Deleted) 
  +0 -70	trunk/modules/operserv/Makefile.win32 (File Deleted) 
  +0 -73	trunk/modules/userserv/Makefile.win32 (File Deleted) 
  +0 -56	trunk/modules/xmlrpc/Makefile.win32 (File Deleted) 
  +0 -68	trunk/protocol/Makefile.win32 (File Deleted) 
  +0 -107	trunk/src/Makefile.win32 (File Deleted) 
  + -		trunk/win32/ (File Deleted) 


w00t        2006/09/24 16:52:33 UTC	(20060924-6445)
  Log:
  REMSTATUS is now obsolete for use in this manner

  Changes:	Modified:
  +0 -18	trunk/protocol/inspircd11.c (File Modified) 


w00t        2006/09/24 16:42:06 UTC	(20060924-6443)
  Log:
  Lowering TS now removes ops sucessfully, and broadcasts FMODEs

  Changes:	Modified:
  +14 -62	trunk/protocol/inspircd11.c (File Modified) 


jilles      2006/09/24 16:08:37 UTC	(20060924-6441)
  Log:
  nickserv/userserv vhost:
  make the comment at the top a bit more serious
  

  Changes:	Modified: