@@ -1,3 +1,12 @@
+nenolod     2006/09/25 09:11:33 UTC	(20060925-6453)
+  Log:
+  - add fault_already_authed
+  
+
+  Changes:	Modified:
+  +2 -1		trunk/include/services.h (File Modified) 
+
+
 nenolod     2006/09/25 09:03:29 UTC	(20060925-6451)
   Log:
   - use our enum {} for boolean_t, not the GCC builtin (portability)
